<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EatSmart</string>
    <string name="action_settings">Settings</string>
	<string name="food_button_title">Add Food</string>
	<string name="food_history_title">History</string>
	<string name="name_label">Name: </string>
	<string name="name_example">John Doe</string>
	<string name="age_label">Age: </string>
	<string name="birthday">Birthday: </string>
	<string name="weight_label">Weight (lb): </string>
	<string name="height_label">Height: </string>
	<string name="foot_label">ft.: </string>
	<string name="inches_label">in.: </string>
	<string name="save_button">Save</string>
	<string name="foods_title">Foods</string>
	<string name="quick_pick_label">Quick Pic!</string>
	<string name="suggested_calorie_intake">Stay Healthy!</string>
	<string name="welcome_label">Welcome</string>
	<string name="organize_quickPick_label">Organize</string>
	<string name="take">Take</string>
	<string name="errorSaving_toast">Error saving foods</string>
	<string name="consumed_food">Consumed Food</string>
	<string name="food_menu">Food Menu</string>
	<string name="organize_quick_picks">Organize Pics</string>
	<string name="profile">Profile</string>
	<string name="update_profile">Update Profile</string>
	<string name="edit_profile">Edit Profile</string>
	<string name="calories">calories</string>
	<string name="servings">Servings</string>
	<string name="pending_food">Pending Food</string>
	<string name="food_name">Food Name</string>
	<string name="title">Eat Smart</string>
	<string name="about">About</string>
	<string-array name="foot_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
	<string-array name="inches_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="activity_levels_array">
        <item>I exercise little</item>
        <item>I do light exercise</item>
        <item>I exercise moderately</item>
        <item>I exercise very often</item>
        <item>I exercise hard core!</item>
    </string-array>
	
</resources>
