<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EatSmart" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcome_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/welcome_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" />

        <Button
            android:id="@+id/quick_pick_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quick_pick_label" />

        <Button
            android:id="@+id/add_food_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_button_title" />

        <Button
            android:id="@+id/history_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_history_title" />

        <Button
            android:id="@+id/organize_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/organize_quickPick_label" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/profile" />

        <TextView
            android:id="@+id/height_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" />

        <TextView
            android:id="@+id/weight_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" />

        <Button
            android:id="@+id/update_profile_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/update_profile" />

    </LinearLayout>

</RelativeLayout>