<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EatSmart" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="Segoe UI"
        android:text="@string/app_name"
        android:textSize="17sp"
        android:typeface="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp" >

            <Button
                android:id="@+id/Button02"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/food_button_title" />

            <Button
                android:id="@+id/Button01"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/food_history_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp" >

            <Button
                android:id="@+id/button2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <Button
                android:id="@+id/button1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>